--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Angel Pulido",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^4.1.2",
+    "chalk": "4.1.2",
     "express": "^4.18.2",
     "mongoose": "^7.0.3"
   }
