--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "Angel Pulido",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "chalk": "4.1.2",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3"
   }
