--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Angel Pulido",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.3.6",
     "bcrypt": "^5.1.0",
     "chalk": "4.1.2",
     "cors": "^2.8.5",
