--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "author": "Angel Pulido",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.3.6",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
-    "chalk": "4.1.2",
+    "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.4.2"
   }
 }
